Updated docs (0c9de06)

--- a/interfaces/iexecution.html
+++ b/interfaces/iexecution.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IExecution | react-hooks - v2.0.0</title>
-	<meta name="description" content="Documentation for react-hooks - v2.0.0">
+	<title>IExecution | react-hooks - v3.0.0</title>
+	<meta name="description" content="Documentation for react-hooks - v3.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">react-hooks - v2.0.0</a>
+					<a href="../index.html" class="title">react-hooks - v3.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,10 +52,10 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">react-hooks - v2.0.0</a>
+					<a href="../modules.html">react-hooks - v3.0.0</a>
 				</li>
 				<li>
-					<a href="iexecution.html">IExecution</a>
+					<a href="IExecution.html">IExecution</a>
 				</li>
 			</ul>
 			<h1>Interface IExecution&lt;T&gt;</h1>
@@ -81,6 +81,12 @@
 					</li>
 				</ul>
 			</section>
+			<section class="tsd-panel">
+				<h3>Implemented by</h3>
+				<ul class="tsd-hierarchy">
+					<li><a href="../classes/Executor.html" class="tsd-signature-type" data-tsd-kind="Class">Executor</a></li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -88,12 +94,12 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="iexecution.html#pending" class="tsd-kind-icon">pending</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="iexecution.html#promise" class="tsd-kind-icon">promise</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="iexecution.html#reason" class="tsd-kind-icon">reason</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="iexecution.html#rejected" class="tsd-kind-icon">rejected</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="iexecution.html#resolved" class="tsd-kind-icon">resolved</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="iexecution.html#result" class="tsd-kind-icon">result</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="IExecution.html#pending" class="tsd-kind-icon">pending</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="IExecution.html#promise" class="tsd-kind-icon">promise</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="IExecution.html#reason" class="tsd-kind-icon">reason</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="IExecution.html#rejected" class="tsd-kind-icon">rejected</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="IExecution.html#resolved" class="tsd-kind-icon">resolved</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="IExecution.html#result" class="tsd-kind-icon">result</a></li>
 							</ul>
 						</section>
 					</div>
@@ -107,7 +113,7 @@
 					<div class="tsd-signature tsd-kind-icon">pending<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L6">createExecutor.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Executor.ts#L6">Executor.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -122,7 +128,7 @@
 					<div class="tsd-signature tsd-kind-icon">promise<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L32">createExecutor.ts:32</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Executor.ts#L32">Executor.ts:32</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -137,7 +143,7 @@
 					<div class="tsd-signature tsd-kind-icon">reason<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L27">createExecutor.ts:27</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Executor.ts#L27">Executor.ts:27</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -152,7 +158,7 @@
 					<div class="tsd-signature tsd-kind-icon">rejected<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L16">createExecutor.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Executor.ts#L16">Executor.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -167,7 +173,7 @@
 					<div class="tsd-signature tsd-kind-icon">resolved<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L11">createExecutor.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Executor.ts#L11">Executor.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -182,7 +188,7 @@
 					<div class="tsd-signature tsd-kind-icon">result<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">T</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L22">createExecutor.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Executor.ts#L22">Executor.ts:22</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -204,101 +210,116 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="iblocker.html" class="tsd-kind-icon">IBlocker</a>
+					<li class=" tsd-kind-class tsd-has-type-parameter">
+						<a href="../classes/Blocker.html" class="tsd-kind-icon">Blocker</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/Checkpoint.html" class="tsd-kind-icon">Checkpoint</a>
+					</li>
+					<li class=" tsd-kind-class tsd-has-type-parameter">
+						<a href="../classes/Executor.html" class="tsd-kind-icon">Executor</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/ExecutorCache.html" class="tsd-kind-icon">Executor<wbr>Cache</a>
 					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-has-type-parameter">
-						<a href="iexecution.html" class="tsd-kind-icon">IExecution</a>
+						<a href="IExecution.html" class="tsd-kind-icon">IExecution</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="iexecution.html#pending" class="tsd-kind-icon">pending</a>
+								<a href="IExecution.html#pending" class="tsd-kind-icon">pending</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="iexecution.html#promise" class="tsd-kind-icon">promise</a>
+								<a href="IExecution.html#promise" class="tsd-kind-icon">promise</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="iexecution.html#reason" class="tsd-kind-icon">reason</a>
+								<a href="IExecution.html#reason" class="tsd-kind-icon">reason</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="iexecution.html#rejected" class="tsd-kind-icon">rejected</a>
+								<a href="IExecution.html#rejected" class="tsd-kind-icon">rejected</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="iexecution.html#resolved" class="tsd-kind-icon">resolved</a>
+								<a href="IExecution.html#resolved" class="tsd-kind-icon">resolved</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="iexecution.html#result" class="tsd-kind-icon">result</a>
+								<a href="IExecution.html#result" class="tsd-kind-icon">result</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="iexecutor.html" class="tsd-kind-icon">IExecutor</a>
-					</li>
 					<li class=" tsd-kind-interface">
-						<a href="iexecutorcache.html" class="tsd-kind-icon">IExecutor<wbr>Cache</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="iexecutorprovider.html" class="tsd-kind-icon">IExecutor<wbr>Provider</a>
+						<a href="IExecutorProvider.html" class="tsd-kind-icon">IExecutor<wbr>Provider</a>
 					</li>
 					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#debounce" class="tsd-kind-icon">Debounce</a>
+						<a href="../modules.html#CheckpointCondition" class="tsd-kind-icon">Checkpoint<wbr>Condition</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#CheckpointFallback" class="tsd-kind-icon">Checkpoint<wbr>Fallback</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#Debounce" class="tsd-kind-icon">Debounce</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#DebounceProtocol" class="tsd-kind-icon">Debounce<wbr>Protocol</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
-						<a href="../modules.html#exactrefcallback" class="tsd-kind-icon">Exact<wbr>Ref<wbr>Callback</a>
+						<a href="../modules.html#ExactRefCallback" class="tsd-kind-icon">Exact<wbr>Ref<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
-						<a href="../modules.html#executorcallback" class="tsd-kind-icon">Executor<wbr>Callback</a>
+						<a href="../modules.html#ExecutorCallback" class="tsd-kind-icon">Executor<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#ExecutorHook" class="tsd-kind-icon">Executor<wbr>Hook</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#SemanticMemoHook" class="tsd-kind-icon">Semantic<wbr>Memo<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#executorprovidercontext" class="tsd-kind-icon">Executor<wbr>Provider<wbr>Context</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#createblocker" class="tsd-kind-icon">create<wbr>Blocker</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#createexecutor" class="tsd-kind-icon">create<wbr>Executor</a>
+						<a href="../modules.html#ExecutorProviderContext" class="tsd-kind-icon">Executor<wbr>Provider<wbr>Context</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#createexecutorcache" class="tsd-kind-icon">create<wbr>Executor<wbr>Cache</a>
+						<a href="../modules.html#areHookInputsEqual" class="tsd-kind-icon">are<wbr>Hook<wbr>Inputs<wbr>Equal</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#createexecutorhook" class="tsd-kind-icon">create<wbr>Executor<wbr>Hook</a>
+						<a href="../modules.html#createExecutorHook" class="tsd-kind-icon">create<wbr>Executor<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#createsemanticmemohook" class="tsd-kind-icon">create<wbr>Semantic<wbr>Memo<wbr>Hook</a>
+						<a href="../modules.html#createSemanticMemoHook" class="tsd-kind-icon">create<wbr>Semantic<wbr>Memo<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useblocker" class="tsd-kind-icon">use<wbr>Blocker</a>
+						<a href="../modules.html#useBlocker" class="tsd-kind-icon">use<wbr>Blocker</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#usedebounce" class="tsd-kind-icon">use<wbr>Debounce</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useexecution" class="tsd-kind-icon">use<wbr>Execution</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useexecutor" class="tsd-kind-icon">use<wbr>Executor</a>
+						<a href="../modules.html#useCheckpoint" class="tsd-kind-icon">use<wbr>Checkpoint</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#usemountsignal" class="tsd-kind-icon">use<wbr>Mount<wbr>Signal</a>
+						<a href="../modules.html#useDebounce" class="tsd-kind-icon">use<wbr>Debounce</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#userefcallback" class="tsd-kind-icon">use<wbr>Ref<wbr>Callback</a>
+						<a href="../modules.html#useExecution" class="tsd-kind-icon">use<wbr>Execution</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#useExecutor" class="tsd-kind-icon">use<wbr>Executor</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#userendereffect" class="tsd-kind-icon">use<wbr>Render<wbr>Effect</a>
+						<a href="../modules.html#useMountSignal" class="tsd-kind-icon">use<wbr>Mount<wbr>Signal</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#useRefCallback" class="tsd-kind-icon">use<wbr>Ref<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#usererender" class="tsd-kind-icon">use<wbr>Rerender</a>
+						<a href="../modules.html#useRenderEffect" class="tsd-kind-icon">use<wbr>Render<wbr>Effect</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="../modules.html#useRerender" class="tsd-kind-icon">use<wbr>Rerender</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usesemanticcallback" class="tsd-kind-icon">use<wbr>Semantic<wbr>Callback</a>
+						<a href="../modules.html#useSemanticCallback" class="tsd-kind-icon">use<wbr>Semantic<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usesemanticmemo" class="tsd-kind-icon">use<wbr>Semantic<wbr>Memo</a>
+						<a href="../modules.html#useSemanticMemo" class="tsd-kind-icon">use<wbr>Semantic<wbr>Memo</a>
 					</li>
 				</ul>
 			</nav>
@@ -310,8 +331,17 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
+				<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
+				<li class="tsd-kind-property tsd-parent-kind-class"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
 			</ul>
 		</div>
 	</div>
