--- a/interfaces/iexecutorprovider.html
+++ b/interfaces/iexecutorprovider.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IExecutorProvider | react-hooks - v2.0.0</title>
-	<meta name="description" content="Documentation for react-hooks - v2.0.0">
+	<title>IExecutorProvider | react-hooks - v3.0.0</title>
+	<meta name="description" content="Documentation for react-hooks - v3.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">react-hooks - v2.0.0</a>
+					<a href="../index.html" class="title">react-hooks - v3.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,10 +52,10 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">react-hooks - v2.0.0</a>
+					<a href="../modules.html">react-hooks - v3.0.0</a>
 				</li>
 				<li>
-					<a href="iexecutorprovider.html">IExecutorProvider</a>
+					<a href="IExecutorProvider.html">IExecutorProvider</a>
 				</li>
 			</ul>
 			<h1>Interface IExecutorProvider</h1>
@@ -70,12 +70,13 @@
 				<ul class="tsd-hierarchy">
 					<li>
 						<span class="target">IExecutorProvider</span>
-						<ul class="tsd-hierarchy">
-							<li>
-								<a href="iexecutorcache.html" class="tsd-signature-type" data-tsd-kind="Interface">IExecutorCache</a>
-							</li>
-						</ul>
 					</li>
+				</ul>
+			</section>
+			<section class="tsd-panel">
+				<h3>Implemented by</h3>
+				<ul class="tsd-hierarchy">
+					<li><a href="../classes/ExecutorCache.html" class="tsd-signature-type" data-tsd-kind="Class">ExecutorCache</a></li>
 				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
@@ -85,8 +86,8 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-interface tsd-has-type-parameter"><a href="iexecutorprovider.html#createexecutor" class="tsd-kind-icon">create<wbr>Executor</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="iexecutorprovider.html#disposeexecutor" class="tsd-kind-icon">dispose<wbr>Executor</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface tsd-has-type-parameter"><a href="IExecutorProvider.html#createExecutor" class="tsd-kind-icon">create<wbr>Executor</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="IExecutorProvider.html#disposeExecutor" class="tsd-kind-icon">dispose<wbr>Executor</a></li>
 							</ul>
 						</section>
 					</div>
@@ -95,21 +96,21 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface tsd-has-type-parameter">
-					<a name="createexecutor" class="tsd-anchor"></a>
+					<a name="createExecutor" class="tsd-anchor"></a>
 					<h3>create<wbr>Executor</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">create<wbr>Executor&lt;T&gt;<span class="tsd-signature-symbol">(</span>listener<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="iexecutor.html" class="tsd-signature-type" data-tsd-kind="Interface">IExecutor</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">create<wbr>Executor&lt;T&gt;<span class="tsd-signature-symbol">(</span>listener<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="../classes/Executor.html" class="tsd-signature-type" data-tsd-kind="Class">Executor</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutorCache.ts#L8">createExecutorCache.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/ExecutorCache.ts#L8">ExecutorCache.ts:8</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Creates a new <a href="iexecutor.html">IExecutor</a> instance.</p>
+									<p>Creates a new <a href="../classes/Executor.html">Executor</a> instance.</p>
 								</div>
 							</div>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -136,21 +137,21 @@
 									</ul>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="iexecutor.html" class="tsd-signature-type" data-tsd-kind="Interface">IExecutor</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="../classes/Executor.html" class="tsd-signature-type" data-tsd-kind="Class">Executor</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
-					<a name="disposeexecutor" class="tsd-anchor"></a>
+					<a name="disposeExecutor" class="tsd-anchor"></a>
 					<h3>dispose<wbr>Executor</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
-						<li class="tsd-signature tsd-kind-icon">dispose<wbr>Executor<span class="tsd-signature-symbol">(</span>executor<span class="tsd-signature-symbol">: </span><a href="iexecutor.html" class="tsd-signature-type" data-tsd-kind="Interface">IExecutor</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">dispose<wbr>Executor<span class="tsd-signature-symbol">(</span>executor<span class="tsd-signature-symbol">: </span><a href="../classes/Executor.html" class="tsd-signature-type" data-tsd-kind="Class">Executor</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutorCache.ts#L13">createExecutorCache.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/ExecutorCache.ts#L13">ExecutorCache.ts:13</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -161,7 +162,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>executor: <a href="iexecutor.html" class="tsd-signature-type" data-tsd-kind="Interface">IExecutor</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span></h5>
+									<h5>executor: <a href="../classes/Executor.html" class="tsd-signature-type" data-tsd-kind="Class">Executor</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -180,89 +181,104 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="iblocker.html" class="tsd-kind-icon">IBlocker</a>
+					<li class=" tsd-kind-class tsd-has-type-parameter">
+						<a href="../classes/Blocker.html" class="tsd-kind-icon">Blocker</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/Checkpoint.html" class="tsd-kind-icon">Checkpoint</a>
+					</li>
+					<li class=" tsd-kind-class tsd-has-type-parameter">
+						<a href="../classes/Executor.html" class="tsd-kind-icon">Executor</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/ExecutorCache.html" class="tsd-kind-icon">Executor<wbr>Cache</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="iexecution.html" class="tsd-kind-icon">IExecution</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="iexecutor.html" class="tsd-kind-icon">IExecutor</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="iexecutorcache.html" class="tsd-kind-icon">IExecutor<wbr>Cache</a>
+						<a href="IExecution.html" class="tsd-kind-icon">IExecution</a>
 					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="iexecutorprovider.html" class="tsd-kind-icon">IExecutor<wbr>Provider</a>
+						<a href="IExecutorProvider.html" class="tsd-kind-icon">IExecutor<wbr>Provider</a>
 						<ul>
 							<li class=" tsd-kind-method tsd-parent-kind-interface tsd-has-type-parameter">
-								<a href="iexecutorprovider.html#createexecutor" class="tsd-kind-icon">create<wbr>Executor</a>
+								<a href="IExecutorProvider.html#createExecutor" class="tsd-kind-icon">create<wbr>Executor</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
-								<a href="iexecutorprovider.html#disposeexecutor" class="tsd-kind-icon">dispose<wbr>Executor</a>
+								<a href="IExecutorProvider.html#disposeExecutor" class="tsd-kind-icon">dispose<wbr>Executor</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
 					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#debounce" class="tsd-kind-icon">Debounce</a>
+						<a href="../modules.html#CheckpointCondition" class="tsd-kind-icon">Checkpoint<wbr>Condition</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#CheckpointFallback" class="tsd-kind-icon">Checkpoint<wbr>Fallback</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#Debounce" class="tsd-kind-icon">Debounce</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#DebounceProtocol" class="tsd-kind-icon">Debounce<wbr>Protocol</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
-						<a href="../modules.html#exactrefcallback" class="tsd-kind-icon">Exact<wbr>Ref<wbr>Callback</a>
+						<a href="../modules.html#ExactRefCallback" class="tsd-kind-icon">Exact<wbr>Ref<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
-						<a href="../modules.html#executorcallback" class="tsd-kind-icon">Executor<wbr>Callback</a>
+						<a href="../modules.html#ExecutorCallback" class="tsd-kind-icon">Executor<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#ExecutorHook" class="tsd-kind-icon">Executor<wbr>Hook</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="../modules.html#SemanticMemoHook" class="tsd-kind-icon">Semantic<wbr>Memo<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-variable">
-						<a href="../modules.html#executorprovidercontext" class="tsd-kind-icon">Executor<wbr>Provider<wbr>Context</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#createblocker" class="tsd-kind-icon">create<wbr>Blocker</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#createexecutor" class="tsd-kind-icon">create<wbr>Executor</a>
+						<a href="../modules.html#ExecutorProviderContext" class="tsd-kind-icon">Executor<wbr>Provider<wbr>Context</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#createexecutorcache" class="tsd-kind-icon">create<wbr>Executor<wbr>Cache</a>
+						<a href="../modules.html#areHookInputsEqual" class="tsd-kind-icon">are<wbr>Hook<wbr>Inputs<wbr>Equal</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#createexecutorhook" class="tsd-kind-icon">create<wbr>Executor<wbr>Hook</a>
+						<a href="../modules.html#createExecutorHook" class="tsd-kind-icon">create<wbr>Executor<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#createsemanticmemohook" class="tsd-kind-icon">create<wbr>Semantic<wbr>Memo<wbr>Hook</a>
+						<a href="../modules.html#createSemanticMemoHook" class="tsd-kind-icon">create<wbr>Semantic<wbr>Memo<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useblocker" class="tsd-kind-icon">use<wbr>Blocker</a>
+						<a href="../modules.html#useBlocker" class="tsd-kind-icon">use<wbr>Blocker</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#usedebounce" class="tsd-kind-icon">use<wbr>Debounce</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useexecution" class="tsd-kind-icon">use<wbr>Execution</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useexecutor" class="tsd-kind-icon">use<wbr>Executor</a>
+						<a href="../modules.html#useCheckpoint" class="tsd-kind-icon">use<wbr>Checkpoint</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#usemountsignal" class="tsd-kind-icon">use<wbr>Mount<wbr>Signal</a>
+						<a href="../modules.html#useDebounce" class="tsd-kind-icon">use<wbr>Debounce</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#userefcallback" class="tsd-kind-icon">use<wbr>Ref<wbr>Callback</a>
+						<a href="../modules.html#useExecution" class="tsd-kind-icon">use<wbr>Execution</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#useExecutor" class="tsd-kind-icon">use<wbr>Executor</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#userendereffect" class="tsd-kind-icon">use<wbr>Render<wbr>Effect</a>
+						<a href="../modules.html#useMountSignal" class="tsd-kind-icon">use<wbr>Mount<wbr>Signal</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#useRefCallback" class="tsd-kind-icon">use<wbr>Ref<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#usererender" class="tsd-kind-icon">use<wbr>Rerender</a>
+						<a href="../modules.html#useRenderEffect" class="tsd-kind-icon">use<wbr>Render<wbr>Effect</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="../modules.html#useRerender" class="tsd-kind-icon">use<wbr>Rerender</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usesemanticcallback" class="tsd-kind-icon">use<wbr>Semantic<wbr>Callback</a>
+						<a href="../modules.html#useSemanticCallback" class="tsd-kind-icon">use<wbr>Semantic<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usesemanticmemo" class="tsd-kind-icon">use<wbr>Semantic<wbr>Memo</a>
+						<a href="../modules.html#useSemanticMemo" class="tsd-kind-icon">use<wbr>Semantic<wbr>Memo</a>
 					</li>
 				</ul>
 			</nav>
@@ -274,8 +290,17 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
+				<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
+				<li class="tsd-kind-property tsd-parent-kind-class"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
 			</ul>
 		</div>
 	</div>
