--- a/classes/Blocker.html
+++ b/classes/Blocker.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Blocker | react-hooks - v3.0.0</title>
-	<meta name="description" content="Documentation for react-hooks - v3.0.0">
+	<title>Blocker | react-hooks - v4.0.1</title>
+	<meta name="description" content="Documentation for react-hooks - v4.0.1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">react-hooks - v3.0.0</a>
+					<a href="../index.html" class="title">react-hooks - v4.0.1</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,7 +52,7 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">react-hooks - v3.0.0</a>
+					<a href="../modules.html">react-hooks - v4.0.1</a>
 				</li>
 				<li>
 					<a href="Blocker.html">Blocker</a>
@@ -65,11 +65,24 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-comment">
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>Provides mechanism for blocking async processes and unblocking them from an external context.</p>
+					</div>
+				</div>
+			</section>
 			<section class="tsd-panel tsd-type-parameters">
 				<h3>Type parameters</h3>
 				<ul class="tsd-type-parameters">
 					<li>
 						<h4>T</h4>
+						<div class="tsd-comment tsd-typography">
+							<div class="lead">
+								<p>The type of value that can be passed to <a href="Blocker.html#unblock">Blocker.unblock</a> to resolve the <code>Promise</code> returned by
+								<a href="Blocker.html#block">Blocker.block</a>.</p>
+							</div>
+						</div>
 					</li>
 				</ul>
 			</section>
@@ -89,14 +102,6 @@
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-has-type-parameter"><a href="Blocker.html#constructor" class="tsd-kind-icon">constructor</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section tsd-is-private tsd-is-private-protected">
-							<h3>Properties</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="Blocker.html#_listener" class="tsd-kind-icon">_listener</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="Blocker.html#_promise" class="tsd-kind-icon">_promise</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="Blocker.html#_resolve" class="tsd-kind-icon">_resolve</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -127,7 +132,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Blocker.ts#L12">Blocker.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/5c97eee/src/main/blocker/Blocker.ts#L18">blocker/Blocker.ts:18</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -169,75 +174,6 @@
 					</ul>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-private tsd-is-private-protected">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-private">
-					<a name="_listener" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagPrivate">Private</span> _listener</h3>
-					<div class="tsd-signature tsd-kind-icon">_listener<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Blocker.ts#L5">Blocker.ts:5</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter-signature">
-								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-class">
-									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
-								</ul>
-								<ul class="tsd-descriptions">
-									<li class="tsd-description">
-										<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
-									</li>
-								</ul>
-							</li>
-						</ul>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-private">
-					<a name="_promise" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagPrivate">Private</span> <span class="tsd-flag ts-flagOptional">Optional</span> _promise</h3>
-					<div class="tsd-signature tsd-kind-icon">_promise<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Blocker.ts#L3">Blocker.ts:3</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-private">
-					<a name="_resolve" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagPrivate">Private</span> <span class="tsd-flag ts-flagOptional">Optional</span> _resolve</h3>
-					<div class="tsd-signature tsd-kind-icon">_resolve<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>result<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Blocker.ts#L4">Blocker.ts:4</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter-signature">
-								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-class">
-									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>result<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
-								</ul>
-								<ul class="tsd-descriptions">
-									<li class="tsd-description">
-										<h4 class="tsd-parameters-title">Parameters</h4>
-										<ul class="tsd-parameters">
-											<li>
-												<h5>result: <span class="tsd-signature-type">T</span></h5>
-											</li>
-										</ul>
-										<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
-									</li>
-								</ul>
-							</li>
-						</ul>
-					</div>
-				</section>
-			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Accessors</h2>
 				<section class="tsd-panel tsd-member tsd-kind-get-signature tsd-parent-kind-class">
@@ -250,7 +186,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Blocker.ts#L16">Blocker.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/5c97eee/src/main/blocker/Blocker.ts#L22">blocker/Blocker.ts:22</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -270,7 +206,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Blocker.ts#L24">Blocker.ts:24</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/5c97eee/src/main/blocker/Blocker.ts#L30">blocker/Blocker.ts:30</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -293,7 +229,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/0c9de06/src/main/Blocker.ts#L35">Blocker.ts:35</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/5c97eee/src/main/blocker/Blocker.ts#L43">blocker/Blocker.ts:43</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -331,15 +267,6 @@
 							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-has-type-parameter">
 								<a href="Blocker.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
-								<a href="Blocker.html#_listener" class="tsd-kind-icon">_listener</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
-								<a href="Blocker.html#_promise" class="tsd-kind-icon">_promise</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
-								<a href="Blocker.html#_resolve" class="tsd-kind-icon">_resolve</a>
-							</li>
 							<li class=" tsd-kind-get-signature tsd-parent-kind-class">
 								<a href="Blocker.html#blocked" class="tsd-kind-icon">blocked</a>
 							</li>
@@ -353,90 +280,6 @@
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-class">
-						<a href="Checkpoint.html" class="tsd-kind-icon">Checkpoint</a>
-					</li>
-					<li class=" tsd-kind-class tsd-has-type-parameter">
-						<a href="Executor.html" class="tsd-kind-icon">Executor</a>
-					</li>
-					<li class=" tsd-kind-class">
-						<a href="ExecutorCache.html" class="tsd-kind-icon">Executor<wbr>Cache</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-has-type-parameter">
-						<a href="../interfaces/IExecution.html" class="tsd-kind-icon">IExecution</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="../interfaces/IExecutorProvider.html" class="tsd-kind-icon">IExecutor<wbr>Provider</a>
-					</li>
-					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#CheckpointCondition" class="tsd-kind-icon">Checkpoint<wbr>Condition</a>
-					</li>
-					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#CheckpointFallback" class="tsd-kind-icon">Checkpoint<wbr>Fallback</a>
-					</li>
-					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#Debounce" class="tsd-kind-icon">Debounce</a>
-					</li>
-					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#DebounceProtocol" class="tsd-kind-icon">Debounce<wbr>Protocol</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
-						<a href="../modules.html#ExactRefCallback" class="tsd-kind-icon">Exact<wbr>Ref<wbr>Callback</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
-						<a href="../modules.html#ExecutorCallback" class="tsd-kind-icon">Executor<wbr>Callback</a>
-					</li>
-					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#ExecutorHook" class="tsd-kind-icon">Executor<wbr>Hook</a>
-					</li>
-					<li class=" tsd-kind-type-alias">
-						<a href="../modules.html#SemanticMemoHook" class="tsd-kind-icon">Semantic<wbr>Memo<wbr>Hook</a>
-					</li>
-					<li class=" tsd-kind-variable">
-						<a href="../modules.html#ExecutorProviderContext" class="tsd-kind-icon">Executor<wbr>Provider<wbr>Context</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#areHookInputsEqual" class="tsd-kind-icon">are<wbr>Hook<wbr>Inputs<wbr>Equal</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#createExecutorHook" class="tsd-kind-icon">create<wbr>Executor<wbr>Hook</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#createSemanticMemoHook" class="tsd-kind-icon">create<wbr>Semantic<wbr>Memo<wbr>Hook</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useBlocker" class="tsd-kind-icon">use<wbr>Blocker</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#useCheckpoint" class="tsd-kind-icon">use<wbr>Checkpoint</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#useDebounce" class="tsd-kind-icon">use<wbr>Debounce</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useExecution" class="tsd-kind-icon">use<wbr>Execution</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useExecutor" class="tsd-kind-icon">use<wbr>Executor</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#useMountSignal" class="tsd-kind-icon">use<wbr>Mount<wbr>Signal</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useRefCallback" class="tsd-kind-icon">use<wbr>Ref<wbr>Callback</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#useRenderEffect" class="tsd-kind-icon">use<wbr>Render<wbr>Effect</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#useRerender" class="tsd-kind-icon">use<wbr>Rerender</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useSemanticCallback" class="tsd-kind-icon">use<wbr>Semantic<wbr>Callback</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#useSemanticMemo" class="tsd-kind-icon">use<wbr>Semantic<wbr>Memo</a>
-					</li>
 				</ul>
 			</nav>
 		</div>
@@ -450,14 +293,6 @@
 				<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
 				<li class="tsd-kind-property tsd-parent-kind-class"><span class="tsd-kind-icon">Property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
 			</ul>
 		</div>
 	</div>
